<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDiceActivity">

    <EditText
        android:id="@+id/diceNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/diceNameText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/diceNumInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/diceNumText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/diceNameInput"
        app:layout_constraintTop_toBottomOf="@+id/diceNameInput" />

    <EditText
        android:id="@+id/diceColorInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/diceColorText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/diceNameInput"
        app:layout_constraintTop_toBottomOf="@+id/diceNumInput" />

    <EditText
        android:id="@+id/diceNoteInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/noteInputText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/diceNameInput"
        app:layout_constraintTop_toBottomOf="@+id/diceColorInput" />

    <ImageView
        android:id="@+id/diceTestImgView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/diceColorInput"
        app:layout_constraintEnd_toStartOf="@+id/diceNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/diceNameInput"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/checkImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkImgBtn"
        app:layout_constraintEnd_toEndOf="@+id/diceTestImgView"
        app:layout_constraintStart_toStartOf="@+id/diceTestImgView"
        app:layout_constraintTop_toBottomOf="@+id/diceTestImgView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/diceSaveButton"
        app:layout_constraintEnd_toEndOf="@+id/diceNameInput"
        app:layout_constraintStart_toStartOf="@+id/diceTestImgView"
        app:layout_constraintTop_toBottomOf="@+id/diceNoteInput" />
</androidx.constraintlayout.widget.ConstraintLayout>