<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDiceActivity">

    <EditText
        android:id="@+id/diceNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/diceNameText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/diceNumEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/diceNumEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/diceNumText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/diceColorEdit"
        app:layout_constraintEnd_toEndOf="@+id/diceNameEdit"
        app:layout_constraintStart_toStartOf="@+id/diceNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/diceNameEdit" />

    <EditText
        android:id="@+id/diceColorEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/diceColorText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/diceNoteEdit"
        app:layout_constraintEnd_toEndOf="@+id/diceNameEdit"
        app:layout_constraintStart_toStartOf="@+id/diceNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/diceNumEdit" />

    <EditText
        android:id="@+id/diceNoteEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/noteInputText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="@+id/diceNameEdit"
        app:layout_constraintStart_toStartOf="@+id/diceNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/diceColorEdit" />

    <ImageView
        android:id="@+id/diceTestImgViewEdit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/diceColorEdit"
        app:layout_constraintEnd_toStartOf="@+id/diceNameEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/diceNameEdit"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/checkImgBtnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:text="@string/checkImgBtn"
        app:layout_constraintBottom_toTopOf="@+id/editButton"
        app:layout_constraintEnd_toEndOf="@+id/diceTestImgViewEdit"
        app:layout_constraintStart_toStartOf="@+id/diceTestImgViewEdit"
        app:layout_constraintTop_toBottomOf="@+id/diceTestImgViewEdit" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="39dp"
        android:text="@string/diceEditButton"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintStart_toStartOf="@+id/diceTestImgViewEdit"
        app:layout_constraintTop_toBottomOf="@+id/diceNoteEdit" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:text="@string/diceDeleteButton"
        app:layout_constraintEnd_toEndOf="@+id/diceNameEdit"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        app:layout_constraintTop_toBottomOf="@+id/diceNoteEdit"
        android:backgroundTint="@color/red"/>

</androidx.constraintlayout.widget.ConstraintLayout>