<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/diceImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/diceNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dice Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="10pt"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/diceNumTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/diceImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/diceNumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="Dice Number"
                android:textSize="8pt"
                app:layout_constraintStart_toEndOf="@+id/number"
                app:layout_constraintTop_toBottomOf="@+id/diceNameTextView" />

            <TextView
                android:id="@+id/diceColorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Dice Color"
                android:textSize="8pt"
                app:layout_constraintStart_toStartOf="@+id/diceNumTextView"
                app:layout_constraintTop_toBottomOf="@+id/number" />

            <TextView
                android:id="@+id/noteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Notes"
                android:textSize="8pt"
                app:layout_constraintStart_toStartOf="@+id/diceNumTextView"
                app:layout_constraintTop_toBottomOf="@+id/color" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/diceNumTextView"
                android:textSize="8pt"
                app:layout_constraintEnd_toStartOf="@+id/diceNumTextView"
                app:layout_constraintStart_toEndOf="@+id/diceImageView"
                app:layout_constraintTop_toBottomOf="@+id/diceNameTextView" />

            <TextView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/diceColorTextView"
                android:textSize="8pt"
                app:layout_constraintStart_toEndOf="@+id/diceImageView"
                app:layout_constraintTop_toBottomOf="@+id/number" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/diceNoteTextView"
                android:textSize="8pt"
                app:layout_constraintStart_toEndOf="@+id/diceImageView"
                app:layout_constraintTop_toBottomOf="@+id/color" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>